--- a/src/main/resources/templates/thymeleaf/footer.html
+++ b/src/main/resources/templates/thymeleaf/footer.html
@@ -12,7 +12,7 @@
 					<ul class="">
 						<li><a href="/termOfService">이용약관</a></li>
 						<!-- <li><a href="javascript:fnModalAlert();">온라인경매약관</a></li> -->
-						<li><a href="/privacyPolicy">개인정보처림방침</a></li>
+						<li><a href="/privacyPolicy">개인정보처리방침</a></li>
 						<!-- <li><a href="javascript:fnModalAlert();">내부정보관리규정</a></li> -->
 					</ul>
 					<div class="footer-icon">
