--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -678,7 +678,7 @@ function changePasswrd(){
 						</div>					
 						<div class="input-box input-group">
 							<input type="text" class="input-3" placeholder="이름" id="mbrNm" name="mbrNm" autocomplete="off" readonly/>
-							<input type="text" class="input-3" placeholder="생년월일" id="mbrBirth" name="mbrBirth" autocomplete="off" readonly style="margin-right: 0px;"/>
+							<input type="text" class="input-3" placeholder="생년월일(본인인증후 자동입력)" id="mbrBirth" name="mbrBirth" autocomplete="off" readonly style="margin-right: 0px;"/>
 						</div>
 						<p class="inp-p" id="mbrNmCheck"></p>
 						<div class="input-box input-group">
